# py2gpt

./: .gitignore  README.md
02-梯度/: README.md  從微分到梯度下降法.md  梯度下降法.md  梯度下降法參考文獻.md
02-梯度/04-反傳遞算法/04-微型Transformer/NoTorch/: README.md  mlp_example.py  pyproject.toml  speed_test.py
02a-NumGrad/: README.md  README1.md  gd.py  gdArray.md  gdArray.py  gdRegression.md  gdRegression.py
02p-NumGrad/: gd.py
03-backprop/: README.md
03-反傳遞/: demo.ipynb
03a-MicroGrad/: README.md  demo.md  demo2.py  ex0.md  ex1.md
03b-MacroGrad/: README.md  classify.py  macrograd.py  mnist.py
03c-MacroGrad2/: README.md  classify.md  classify.py  mnist2.py  mnist2b.md
03d-MacroGrad3_fail/: classify.md  classify.py  mnist1_fail.py  mnist2a.md  mnist2a.py  mnist2b.py  mnist3.py
03p-MicroGrad/: demo.py  ex1.py  test_ccc.py
03p2-MacroGrad/: mnist.py
04-Gpt/: README.md
04-RNN/: gen_e2c.py  gen_exp.py  gen_qa.py  run.sh
04a-MinGpt/: demoData.py
04a-MinRnn/: english.py  gen_english.py  gen_summary.py  main.py  song_star_gru.txt
04b-MinGpt/: README.md  chargpt.md  chargpt.py  demo.md  generate.md  guide.md  導讀.md
05-GPT/: chargpt.md  demo.md  demo.py  demoData.md  generate.py  導讀.md
05-RNN/: README.md
05a-MinRnn/: data_utils.py
05a-llama/: README.md
05b-llama2/: README.md  原理導讀.md
05p-MinRNN/: english_rnn.txt  main.py
06a-MinGpt/: generate.md
A1a-LayerGrad/: README.md  mnist.py
A2a-MinRnn/: README.md
P1-MacroGrad/: mnist.py
_book/: 01-深度學習簡介.md  02a-梯度下降法.md  02a1-自製梯度下降法.md  02c-梯度下降法2.md  03a-詞向量.md  03c-embed層.md  04-Transformer.md  05-GPT.md  (+19 more)
(+118 files in other folders)
