[tool.poetry]
name = "NoTorch"
version = "0.1.0"
description = "A from-scratch deep learning library implementation (no Pytorch) based on micrograd"
authors = ["Lucas Cecchi"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
sklearn = "^0.0"
torch = "^1.11.0"
micrograd = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
